list-group-item-linkable(theory)

--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -98,5 +98,6 @@
 {% load staticfiles %}
   <script src="{% static 'js/viz.js/viz.js' %}"></script>
   <script src="{% static 'js/viz.js/full.render.js' %}"></script>
+  <script>$('#DFA_to_regex').addClass('active');</script>
 
 {% endblock %}
