--- a/theory/templates/theory/lessons/FA.html
+++ b/theory/templates/theory/lessons/FA.html
@@ -62,5 +62,6 @@
 <p>т.е. автомат M распознает язык A = {w | M допускает w}. <br> Неформально: aвтомат M допускает язык A, если он допускает все цепочки этого языка, и только их.</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script>$('#FA').addClass('active');</script>
 
 {% endblock %}
