--- a/theory/templates/theory/lessons/automaton_languages.html
+++ b/theory/templates/theory/lessons/automaton_languages.html
@@ -62,5 +62,6 @@
 <h5 class="mb-3 mt-5">Примеры языков.</h5>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script>$('#automaton_languages').addClass('active');</script>
 
 {% endblock %}
