--- a/theory/templates/theory/lessons/regex_equivalence.html
+++ b/theory/templates/theory/lessons/regex_equivalence.html
@@ -60,6 +60,8 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+<script>$('#regex_equivalence').addClass('active');</script>
+
 {% endblock %}
 
 ((a+bc)*)*=(a+bc)*
