--- a/theory/templates/theory/lessons/basic_definitions.html
+++ b/theory/templates/theory/lessons/basic_definitions.html
@@ -136,5 +136,6 @@
         {b}•( {c} ∪ ({d} ∪ {a}•{b})*)</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script>$('#basic_definitions').addClass('active');</script>
 
 {% endblock %}
