--- a/theory/templates/theory/lessons/intro.html
+++ b/theory/templates/theory/lessons/intro.html
@@ -11,5 +11,6 @@
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script>$('#intro').addClass('active');</script>
 
 {% endblock %}
