--- a/theory/templates/theory/lessons/regex_to_NFA.html
+++ b/theory/templates/theory/lessons/regex_to_NFA.html
@@ -84,5 +84,6 @@
   <!-- <script src="{% static 'js/theory/regex_to_NFA.js' %}"></script> -->
   <script src="{% static 'js/viz.js/viz.js' %}"></script>
   <script src="{% static 'js/viz.js/full.render.js' %}"></script>
+  <script>$('#regex_to_NFA').addClass('active');</script>
 
 {% endblock %}
