--- a/practice/templates/practice/tasks/simplify_regex.html
+++ b/practice/templates/practice/tasks/simplify_regex.html
@@ -63,5 +63,6 @@
   <script src="{% static 'js/viz.js/viz.js' %}"></script>
   <script src="{% static 'js/viz.js/full.render.js' %}"></script>
   <script src="{% static 'js/practice/moving.js' %}"></script>
+  <script src="{% static 'js/practice/results.js' %}"></script>
   <script>$('#simplify_regex').addClass('active');</script>
 {% endblock %}
