--- a/practice/templates/practice/tasks/task_1.html
+++ b/practice/templates/practice/tasks/task_1.html
@@ -47,5 +47,6 @@
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/practice_task_1.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
+<script src="{% static 'js/practice/results.js' %}"></script>
 <script>$('#task1').addClass('active');</script>
 {% endblock %}
