--- a/practice/templates/practice/tasks/task_DFA_to_regex.html
+++ b/practice/templates/practice/tasks/task_DFA_to_regex.html
@@ -47,6 +47,7 @@
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/taskDFAtoregex.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
+<script src="{% static 'js/practice/results.js' %}"></script>
 <script>$('#task_DFA_to_regex').addClass('active');</script>
 
 {% endblock %}
