--- a/practice/templates/practice/tasks/task_3.html
+++ b/practice/templates/practice/tasks/task_3.html
@@ -92,5 +92,6 @@
   <script src="{% static 'js/viz.js/viz.js' %}"></script>
   <script src="{% static 'js/viz.js/full.render.js' %}"></script>
   <script src="{% static 'js/practice/moving.js' %}"></script>
+  <script src="{% static 'js/practice/results.js' %}"></script>
   <script>$('#task3').addClass('active');</script>
 {% endblock %}
