Automata fix checking

--- a/practice/templates/practice/tasks/lang_description.html
+++ b/practice/templates/practice/tasks/lang_description.html
@@ -30,7 +30,7 @@
     <p id="description"></p>
     <hr>
     <div id="answer_request">
-      <form  method="POST">
+      <form >
           {% csrf_token %}
           <div class="form-group mb-3 mt-">
               <label for="inputRegex"><p class="mt-4 mb-2">Какое регулярное выражение ему соответствует?</p></label>
