--- a/mainApp/static/css/style.css
+++ b/mainApp/static/css/style.css
@@ -83,3 +83,17 @@ table.table-bordered > tbody > tr > th{
     background-color: #f5f5f5;
     cursor: pointer;
 }
+
+@page 
+{
+
+size: auto; /* auto is the current printer page size */
+margin: 0mm; /* this affects the margin in the printer settings */
+}
+
+@media print {
+#print {
+display : none;
+}
+}
+
