--- a/theory/templates/theory/lessons/regex_equivalence.html
+++ b/theory/templates/theory/lessons/regex_equivalence.html
@@ -4,44 +4,44 @@
 <div class="jumbotron">
     <div class="container">
     <h3 class="mb-3">Эквивалентность регулярных выражений</h3>
-    <p>Два регулярных выражения R и S называются эквивалентными
-        (обозначается R=S) тогда и только тогда, когда соответствующие им
-        языки совпадают, т.е. L(R)=L(S).</p>
+    <p>Два регулярных выражения <span class="math inline">\(R\)</span> и <span class="math inline">\(S\)</span> называются эквивалентными
+        (обозначается <span class="math inline">\(R=S\)</span> тогда и только тогда, когда соответствующие им
+        языки совпадают, т.е. <span class="math inline">\(L(R)=L(S)\)</span>.</p>
     <p>Пример:<br>
-        a*a+ = aa* = a+ - все непустые цепочки, состоящие из а</p>
+        <span class="math inline">\( \large a^*a^+ = aa^* = a^+\)</span> - все непустые цепочки, состоящие из <span class="math inline">\( \large a\)</span></p>
 </div>
 </div>
 
-<p>Для любых регулярных выражений R, S и T справедливы соотношения:</p>
+<p>Для любых регулярных выражений <span class="math inline">\(R, S\)</span> и <span class="math inline">\(T\)</span> справедливы соотношения:</p>
 
 <ul>
-    <li><p>R + S = S + R; </p></li>
-    <li><p>R + R=R;</p></li>
-    <li><p>∅ + R = R;</p></li> 
-    <li><p>(R + S) + T = R + (S + T)</p></li>
+    <li><p><span class="math inline">\(R + S = S + R\)</span></p></li>
+    <li><p><span class="math inline">\(R + R=R\)</span></p></li>
+    <li><p><span class="math inline">\(\emptyset + R = R\)</span></p></li> 
+    <li><p><span class="math inline">\((R + S) + T = R + (S + T)\)</span></p></li>
     
-    <li><p>Rε=εR=R;</p></li>
-    <li><p>(RS)T=R(ST);</p></li>
-    <li><p>∅R=R∅=∅ (но в общем случае RS≠SR);</p></li> 
-    <li><p>R(S+T)=RS+RT;</p></li>
+    <li><p><span class="math inline">\(R \varepsilon = \varepsilon R = R\)</span></p></li>
+    <li><p><span class="math inline">\((RS)T=R(ST);\)</span></p></li>
+    <li><p><span class="math inline">\(∅R=R∅=∅ (\)</span>но в общем случае: <span class="math inline">\(RS ≠ SR);\)</span></p></li> 
+    <li><p><span class="math inline">\(R(S+T)=RS+RT;\)</span></p></li>
 
-    <li><p>(S+T)R=SR+TR;</p></li>
-    <li><p>R*=ε + R + R2 + R3 + .. + RkR*;</p></li>
-    <li><p>RR*=R*R;</p></li> 
-    <li><p>R(SR)*=(RS)*R</p></li>
+    <li><p><span class="math inline">\((S+T)R=SR+TR;\)</span></p></li>
+    <li><p><span class="math inline">\(R^* = \varepsilon + R + R^2 + R^3 + .. + R^kR^*;\)</span></p></li>
+    <li><p><span class="math inline">\(RR^*=R^*R;\)</span></p></li> 
+    <li><p><span class="math inline">\(R(SR)^*=(RS)^*R\)</span></p></li>
 
-    <li><p>R+=R + R2 + R3 + ... + RkR*</p></li> 
-    <li><p>R + ε = R*</p></li>
+    <li><p><span class="math inline">\(R^+ = R + R^2 + R^3 + ... + R^kR^*\)</span></p></li> 
+    <li><p><span class="math inline">\(R^+ + ε = R^*\)</span></p></li>
 </ul>
 
 <h5 class="mb-3 mt-5">Пример эквивалентных преобразований:</h5>
 
-<p>b(b + aa*b) => [ по правилу R = ε R ]</p>
-<p>b(εb + aa*b) => [ по правилу SR + TR = (S + T) R]</p>
-<p>b( ε + aa* )b => [ по правилу RR* = R+ ]</p>
-<p>b( ε + a+ )b => [ по правилу ε + R+ = R* ]</p>
-<p>b(a*)b => [ убираем скобки ]</p>
-<p>ba*b</p>
+<p><span class="math inline">\(b(b + aa^*b)\)</span> => [ по правилу <span class="math inline">\(R = ε R\)</span> ]</p>
+<p><span class="math inline">\(b(εb + aa^*b)\)</span> => [ по правилу <span class="math inline">\(SR + TR = (S + T) R\)</span> ]</p>
+<p><span class="math inline">\(b( ε + aa^* )b\)</span> => [ по правилу <span class="math inline">\(RR^* = R^+\)</span> ]</p>
+<p><span class="math inline">\(b( ε + a^+ )b\)</span> => [ по правилу <span class="math inline">\(ε + R^+ = R^*\)</span> ]</p>
+<p><span class="math inline">\(b(a^*)b\)</span> => [ убираем скобки ]</p>
+<p><span class="math inline">\(ba^*b\)</span></p>
 
 <h5 class="mb-3 mt-5">Регулярные языки и автоматные языки</h5>
 <p>Итак, регулярные выражения - это конечные формулы, задающие
@@ -50,10 +50,10 @@
 
 
 <h5 class="mb-3 mt-5">Теорема Клини:</h5>
-<p> Классы регулярных множеств и автоматных языков совпадают, т.е. LA = LR.</p>
+<p> Классы регулярных множеств и автоматных языков совпадают, т.е. <span class="math inline">\(L_A = L_R\)</span>.</p>
 <p>Это значит, что любой язык, распознаваемый конечным автоматом,
     может быть задан формулой, и для любого языка, заданного
-    формулой (рег выр), может быть построен КА, его распознающий</p>
+    формулой (рег. выр), может быть построен КА, его распознающий</p>
 
 <p class="mt-5"><i>*Источник: "Логика и теория автоматов" (Ю.Г.Карпов)</i></p>
 
