--- a/practice/templates/practice/tasks/chain_acceptance.html
+++ b/practice/templates/practice/tasks/chain_acceptance.html
@@ -45,8 +45,8 @@
 {% load staticfiles%}
 <script src="{% static 'js/viz.js/viz.js' %}"></script>
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
-<script src="{% static 'js/practice/practice_task_1.js' %}"></script>
+<script src="{% static 'js/practice/chain_acceptance.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
-<script>$('#task1').addClass('active');</script>
+<script>$('#chain_acceptance').addClass('active');</script>
 {% endblock %}
