--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -52,7 +52,7 @@
                     </li>
                     <li class="nav-item px-1" id="theory_tab"><a class="nav-link" href="{% url 'intro' %}">Теория</a>
                     </li>
-                    <li class="nav-item px-1" id="practice_tab"><a class="nav-link" href="{% url 'task1' %}">Практика</a></li>
+                    <li class="nav-item px-1" id="practice_tab"><a class="nav-link" href="{% url 'chain_acceptance' %}">Практика</a></li>
                 </ul>
                 {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
