--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
-            <li class="list-group-item list-group-item-linkable" data-link="{% url 'task1' %}" id="task1">Допущение цепочки автоматом</li>
+            <li class="list-group-item list-group-item-linkable" data-link="{% url 'chain_acceptance' %}" id="chain_acceptance">Допущение цепочки автоматом</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'lang_description' %}" id="lang_description">Регулярное выражение по описанию языка</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'task2' %}" id="task2">Принадлежность слова регулярному выражению</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'simplify_regex' %}" id="simplify_regex">Упростить регулярное выражение</li>
