--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -11,7 +11,9 @@
 
     <link rel="shortcut icon" href="{% static 'media/favicon.ico' %}" type="image/x-icon">
     <!-- <link rel="icon" href="{% static 'media/favicon.ico' %}" type="image/x-icon"> -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/pagination.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
 
     <!--    jQuerty-->
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
