Accordance - data from db

--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -16,9 +16,9 @@
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'chain_acceptance' %}" id="chain_acceptance">Допущение цепочки автоматом</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'lang_description' %}" id="lang_description">Регулярное выражение по описанию языка</li>
-            <li class="list-group-item list-group-item-linkable" data-link="{% url 'task2' %}" id="task2">Принадлежность слова регулярному выражению</li>
+            <li class="list-group-item list-group-item-linkable" data-link="{% url 'expression_belongs' %}" id="expression_belongs">Принадлежность слова регулярному выражению</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'simplify_regex' %}" id="simplify_regex">Упростить регулярное выражение</li>
-            <li class="list-group-item list-group-item-linkable" data-link="{% url 'task3' %}" id="task3">Соотвествие автомата рег. выражению</li>
+            <li class="list-group-item list-group-item-linkable" data-link="{% url 'accordance' %}" id="accordance">Соотвествие автомата рег. выражению</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'task_DFA_to_regex' %}" id="task_DFA_to_regex">ДКА в регулярное выражение</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'task_DFA_to_regex' %}" >Регулярность языка</li>
         </ul>
