--- a/practice/templates/practice/tasks/accordance.html
+++ b/practice/templates/practice/tasks/accordance.html
@@ -9,11 +9,9 @@
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item" id="btn_task_1"><a class="page-link">1</a></li>
-    <li class="page-item" id="btn_task_2"><a class="page-link">2</a></li>
-    <li class="page-item" id="btn_task_3"><a class="page-link">3</a></li>
-    <li class="page-item" id="btn_task_4"><a class="page-link">4</a></li>
-    <li class="page-item" id="btn_task_5"><a class="page-link">5</a></li>
+    {% for i in range %}
+    <li class="page-item" id="btn_task_{{ i }}"><a class="page-link">{{ i }}</a></li>
+    {% endfor %}
     <li class="page-item">
       <a class="page-link" aria-label="Next" id="next">
         <span aria-hidden="true">&raquo;</span>
@@ -80,6 +78,7 @@
         </div>
     
     <br>
+    <p id="nnn" style="display:none;">{{ tasks_number }}</p>
     <p id="result"></p>
     <button class="btn btn-success btn-block" id="btn_accept">Подтвердить</button>
   </div>
@@ -88,10 +87,10 @@
 </div>
 
 {% load staticfiles%}
-  <script src="{% static 'js/practice/practice_task_3.js' %}"></script>
+  <script src="{% static 'js/practice/accordance.js' %}"></script>
   <script src="{% static 'js/viz.js/viz.js' %}"></script>
   <script src="{% static 'js/viz.js/full.render.js' %}"></script>
   <script src="{% static 'js/practice/moving.js' %}"></script>
   <script src="{% static 'js/practice/results.js' %}"></script>
-  <script>$('#task3').addClass('active');</script>
+  <script>$('#accordance').addClass('active');</script>
 {% endblock %}
