data download (workversion)

--- a/practice/templates/practice/tasks/simplify_regex.html
+++ b/practice/templates/practice/tasks/simplify_regex.html
@@ -50,7 +50,7 @@
     
         <br>
         <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-        <p id="result"></p>
+        <p id="result" style="display:none;"></p>
         <button class="btn btn-success btn-block" id="btn_accept">Подтвердить</button>
     </div>
     <button class="btn btn-primary btn-block" id="btn_repeat" hidden>Повторить</button>
