--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -9,20 +9,12 @@
             <div class="col-sm-8 mx-auto">
                 <h1>Регулярные выражения</h1>
                 <br>
-                <h3>Введение</h3>
-                <br>
                 <p>Механизм регулярных выражений нашел применение во многих программных продуктах, входит
-                    в стандартную библиотеку или даже является частью языка программирования. При помощи
+                    в стандартную библиотеку или даже является частью языка программирования.</p><p>При помощи
                     регулярных выражений можно достаточно просто описать любой регулярный язык, а для
                     регулярных языков существуют простые алгоритмы проверки принадлежности цепочки заданному
                     языку.</p>
-                <p>Обзор задания: реализовать программу, которая принимает в качестве параметра регулярное
-                    выражение, читает строчки (цепочки символов) со стандартного ввода, а на стандартный вывод
-                    выдает только те строчки, которые удовлетворяют заданному регулярному выражению. У
-                    программы должен быть специальный режим работы, в котором она печатает на стандартный
-                    вывод описание сгенерированного для разбора цепочки автомата</p>
-                <br>
-                <p><a class="btn btn-primary btn-lg" href="{% url 'intro' %}" role="button" style="padding: .5rem 2rem !important;">Начать</a></p>
+                <p class="mt-5"><a class="btn btn-primary btn-lg" href="{% url 'intro' %}" role="button" style="padding: .5rem 2rem !important;">Перейти к теории</a></p>
             </div>
         </div>
     </main>
