theory content list

--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -19,8 +19,7 @@
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'regex_equivalence' %}" id="regex_equivalence">Эквивалентность регулярных выражений</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'FA' %}" id="FA">Конечные автоматы</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'automaton_languages' %}" id="automaton_languages">Автоматные языки</li>
-            <li class="list-group-item list-group-item-linkable" data-link="{% url 'regex_to_NFA' %}" id="regex_to_NFA">Построение ДКА по регулярному выражению</li>
-            <li class="list-group-item list-group-item-linkable" >Построение НКА</li>
+            <li class="list-group-item list-group-item-linkable" data-link="{% url 'regex_to_NFA' %}" id="regex_to_NFA">Построение НКА по регулярному выражению</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'NFA_to_DFA' %}" id="NFA_to_DFA">Построение ДКА по НКА</li>
             <li class="list-group-item list-group-item-linkable" data-link="{% url 'DFA_to_regex' %}" id="DFA_to_regex">Преобразование ДКА в регулярное выражение</li>
         </ul>
