--- a/theory/templates/theory/lessons/intro.html
+++ b/theory/templates/theory/lessons/intro.html
@@ -4,7 +4,17 @@
 <div class="jumbotron">
     <div class="container">
         <h3 class="mb-3">Введение</h3>
-        <p></p>
+        <p>В данном кратком руководстве рассматриваются следющие разделы:</p>
+        
+        <ol>
+            <li><p>Регулярные множества и выражения</p></li>
+            <li><p>Эквивалентность регулярных выражений</p></li>
+            <li><p>Конечные автоматы</p></li>
+            <li><p>Автоматные языки</p></li>
+            <li><p>Построение НКА по регулярному выражению</p></li>
+            <li><p>Построение ДКА по НКА</p></li>
+            <li><p>Преобразование ДКА в регулярное выражение</p></li>
+        </ol>
     </div>
 </div>
 
